# robomuse_legacy_rebuild

./: .gitignore  LICENSE  README.md
docker/: Dockerfile.noetic
firmware/Teleop_Arduino/: Teleop_Arduino.ino
firmware/robomuse_arduino_code/: robomuse_arduino_code.ino
src/arduino_pi_comm/: CMakeLists.txt  package.xml
src/arduino_pi_comm/launch/: arduino_base.launch
src/arduino_pi_comm/scripts/: cmd_vel_to_motor.py  odometry_publisher.py  odometry_pyscript.py  robomuse_cmd_vel_pyscript.py  subscriberArduino.py
src/robomuse_bringup/: CMakeLists.txt  package.xml
src/robomuse_bringup/launch/: bringup.launch  robomuse_lidar.launch
src/robomuse_description/: package.xml
src/robomuse_description/rviz/: urdf.rviz
src/robomuse_description/urdf/: materials.xacro  robomuse.gazebo  robomuse.xacro
src/robomuse_gazebo/: CMakeLists.txt  package.xml
src/robomuse_gazebo/launch/: display.launch  gazebo.launch  spawn.launch  teleop_launch.launch
src/robomuse_gazebo/worlds/: empty_world.world
src/robomuse_navigation/: CMakeLists.txt  package.xml
src/robomuse_navigation/launch/: amcl.launch  move_base.launch  robomuse_navigation.launch
src/robomuse_navigation/maps/: corridor.pgm  corridor.yaml  faculty_office_3_2.pgm  faculty_office_3_2.yaml  fluidics_and_heattransfer_lab.pgm  fluidics_and_heattransfer_lab.yaml  my_map.pgm  my_map.yaml  my_map1.pgm  my_map2.pgm  my_map2.yaml  propmotor_map.pgm  propmotor_map.yaml  robomuse_map.yaml  robotics_lab.pgm  robotics_lab.yaml  secondfloor_corridor.pgm  secondfloor_corridor.yaml
src/robomuse_navigation/param/: costmap_common_params.yaml  dwa_local_planner_params.yaml  global_costmap_params.yaml  global_planner_params.yaml  local_costmap_params.yaml  move_base_params.yaml
src/robomuse_navigation/rviz/: robomuse_navigation.rviz
src/robomuse_slam/: CMakeLists.txt  package.xml
src/robomuse_slam/launch/: robomuse_cartographer.launch  robomuse_gmapping.launch  robomuse_slam.launch
src/robomuse_slam/rviz/: .~lock.mapping.rviz#  mapping.rviz  robomuse_cartographer.rviz
